Fix import statement for Auth module version

--- a/my.html
+++ b/my.html
@@ -8,7 +8,7 @@
   <style>.card{margin-bottom:12px}.file{border:1px dashed #334155;border-radius:10px;padding:12px}</style>
   <script type="module">
     const v='3.0.0';
-    import * as Auth from './js/auth.js?v='+encodeURIComponent(v);
+    import * as Auth from './js/auth.js?v=3.0.0';
 
     const $ = s=>document.querySelector(s);
     let IDT=null;
