--- a/my.html
+++ b/my.html
@@ -5,23 +5,30 @@
   <title>OpenMeet – Your Meetings</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="./assets/theme.css">
-  <style>.card{margin-bottom:12px}.file{border:1px dashed #334155;border-radius:10px;padding:12px}</style>
+  <style>.wrap{max-width:1100px;margin:0 auto;padding:16px}.card{margin-bottom:12px}.file{border:1px dashed #334155;border-radius:10px;padding:12px}</style>
+
+  <!-- Google Identity Services -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
   <script type="module">
-    const v='3.0.0';
-    import * as Auth from './js/auth.js?v=3.0.0';
+    import * as Auth from './js/auth.js?v=3.0.1';
+    import { mountTopnav } from './js/topnav.js?v=1';
 
     const $ = s=>document.querySelector(s);
     let IDT=null;
-    const WEBAPP_URL = (Auth.WEBAPP_URL || (window.OpenMeetAuth && window.OpenMeetAuth.WEBAPP_URL));
+    const WEBAPP_URL = Auth.WEBAPP_URL;
 
-    async function jpost(o){ const r=await fetch(WEBAPP_URL,{method:'POST',headers:{'Content-Type':'text/plain;charset=utf-8'},body:JSON.stringify(o)}); const t=await r.text(); let j; try{ j=JSON.parse(t); }catch{ throw new Error('Bad JSON: '+t); } if(j.error) throw new Error(j.error); return j; }
+    async function jpost(o){
+      const r=await fetch(WEBAPP_URL,{method:'POST',headers:{'Content-Type':'text/plain;charset=utf-8'},body:JSON.stringify(o)});
+      const t=await r.text(); let j;
+      try{ j=JSON.parse(t); }catch{ throw new Error('Bad JSON: '+t); }
+      if (j.error) throw new Error(j.error); return j;
+    }
 
     async function boot(){
-      if (Auth && Auth.initGoogle) await Auth.initGoogle(); else if (window.OpenMeetAuth) await window.OpenMeetAuth.initGoogle();
-      const fn = (Auth && Auth.getIdToken) ? Auth.getIdToken : (window.OpenMeetAuth && window.OpenMeetAuth.getIdToken);
-      if (!fn) throw new Error('getIdToken missing');
-      IDT = await fn(false);
-      $('#who').textContent='Signed in';
+      await mountTopnav();            // ⭐ Google button / status
+      await Auth.initGoogle();
+      IDT = Auth.peekIdToken() || await Auth.getIdToken(false);
 
       const mine = await jpost({action:'my_meetings_secure', id_token:IDT});
       const list = $('#list'); list.innerHTML='';
@@ -59,9 +66,11 @@
   </script>
 </head>
 <body>
+  <!-- Top nav with Google button/status -->
+  <div id="topnav"></div>
+
   <div class="wrap">
     <h2>Your Meetings</h2>
-    <div id="who" class="muted">Loading sign-in…</div>
     <div id="list" style="margin-top:12px"></div>
   </div>
 </body>
